Visual FrontEnd API definido

--- a/resources/html/franquias.html
+++ b/resources/html/franquias.html
@@ -36,56 +36,46 @@
             </ul>
         </nav>
         </header>
-        <!------------------------- BANNER ------------------------->
-        <div class="banner container">
-            <div class="title">
-                <h2> O MELHOR DA CULINÁRIA ITALIANA! </h2>
-                <h3> Desfrute o verdadeiro sabor da Itália, feito por italianos legítimos. </h3>
-            </div>
-            <div class="buttons">
-                <a href="contato.html"><button class="btn btn-encontre bg-green radius"> Nos Encontre <i class="fa fa-arrow-circle-right"></i></button></a>
-                <a href="cardapio.html"><button class="btn btn-sobre bg-red radius"> Cardápio <i class="fa fa-question-circle"></i></button></a>
-            </div>
-        </div>
-        <!------------------------- SERVIÇOS ------------------------->
-        <main class="servicos container">
-            <article class="servico radius">
-                <a href="cardapio.html"><img src="../img/servicos.jpg" alt="Pratos da casa"></a>
-                <div class="inner">
-                    <a href="cardapio.html">Pratos da Casa</a>
-                    <h4>Massas, lasanhas e risotos.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla tenetur ducimus harum dignissimos totam perferendis id officiis inventore distinctio animi magni, obcaecati est minus quis in unde officia dolorem.</p>
+        <!------------------------- FRANQUIAS ------------------------->
+        <main class="franquias container">
+            <h1>FRANQUIAS POR TODO O ESTADO, ESCOLHA A MAIS PRÓXIMA DE VOCÊ!</h1>
+            <h2>Saiba todos os restaurantes que estão disponíveis pelo Rio Grande do Sul.</h2>
+            <hr>
+            <section class="galeria">
+                <div class="galeria_imagens">
+                    <img src="../img/Porto_Alegre.png" alt="Matriz de Porto Alegre">
+                    <p class="legenda_imagem">Matriz Porto Alegre</p>
+                    <h3>(51) 3259-1229 <i class="fab fa-whatsapp"></i>
+                        <br>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i><i> Rua 24 de Outubro, 820</i>
+                    </h3>
                 </div>
-            </article>
-            <article class="servico radius">
-                <a href="cardapio.html"><img src="../img/tele_entrega.jpg" alt="Tele entrega de comida"></a>
-                <div class="inner">
-                    <a href="cardapio.html">Tele-entrega</a>
-                    <h4>Os melhores pratos italianos no conforto da sua casa.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla tenetur ducimus harum dignissimos totam perferendis id officiis inventore distinctio animi magni, obcaecati est minus quis in unde officia dolorem.</p>
+                <div class="galeria_imagens">
+                    <img src="../img/Gramado.png" alt="Franquia de Gramado">
+                    <p class="legenda_imagem">Franquia Gramado</p>
+                    <h3>(54) 3120-8472 <i class="fab fa-whatsapp"></i>
+                        <br>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i><i> Rua Augusto Zatti, 188</i>
+                    </h3>
                 </div>
-            </article>
-            <article class="servico radius">
-                <a href="contato.html"><img src="../img/eventos.jpg" alt="Eventos comemorativos com buffet"></a>
-                <div class="inner">
-                    <a href="contato.html">Eventos</a>
-                    <h4>Comemore conosco as suas datas especiais.</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nulla tenetur ducimus harum dignissimos totam perferendis id officiis inventore distinctio animi magni, obcaecati est minus quis in unde officia dolorem.</p>
+                <div class="galeria_imagens">
+                    <img src="../img/Bento_Gonçalves.png" alt="Franquia de Bento Gonçalves">
+                    <p class="legenda_imagem">Franquia Bento Gonçalves</p>
+                    <h3>(54) 3022-7433 <i class="fab fa-whatsapp"></i>
+                        <br>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i><i> Av Dr. Antônio Casagrande, 423</i>
+                    </h3>
                 </div>
-            </article>
+                <div class="galeria_imagens">
+                    <img src="../img/Caxias_do_Sul.png" alt="Franquia de Caxias do Sul">
+                    <p class="legenda_imagem">Franquia Caxias do Sul</p>
+                    <h3>(54) 3229-0149 <i class="fab fa-whatsapp"></i>
+                        <br>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i><i> Rua Marquês do Herval, 1283</i>
+                    </h3>
+                </div>
+            </section>
         </main>
-        <!------------------------- HORÁRIO DE FUNCIONAMENTO ------------------------->
-        <section class="horario container bg-green">
-            <h2> Horário de funcionamento <br> <i class="far fa-clock"></i></h2>
-            <h3> 
-                <em>Segunda a sexta:</em> das 11h às 15h e das 18h30 às 22h45<br>
-                <em>Sábados, domingos e feriados:</em> das 11h às 15h30 e das 18h30 às 22h45
-            </h3>
-            <h3>
-                Mais informações em: (51) 3259-1229 <i class="fab fa-whatsapp"></i><br>
-                *Telefone válido apenas para a cidade de Porto Alegre
-            </h3>
-        </section>
         <!------------------------- RODAPÉ ------------------------->
         <footer class="rodape container">
             <div class="social-icons">
