Arquivos JS front end API

--- a/resources/html/sobre.html
+++ b/resources/html/sobre.html
@@ -22,17 +22,17 @@
     <body>
         <!------------------------- LOGO E MENU RESPONSIVO ------------------------->
         <header class="cabecalho container">
-        <a href="index.html"> <h1 class="logo"> Ristorante Gianluca</h1></a>
+        <a href="#index.html"> <h1 class="logo"> Ristorante Gianluca</h1></a>
         <button class="btn-menu bg-gradient"> <i class="fa fa-bars fa-lg"></i></button>
         <nav class="menu">
             <a class="btn-close"><i class="fa fa-times"></i></a>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="franquias.html">Franquias</a></li>
-                <li><a href="cardapio.html">Cardápio</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="restrito.html">Restrito</a></li>
+                <li><a href="#index.html">Home</a></li>
+                <li><a href="#sobre.html">Sobre</a></li>
+                <li><a href="#lojas.html">Franquias</a></li>
+                <li><a href="#cardapio.html">Cardápio</a></li>
+                <li><a href="#contato.html">Contato</a></li>
+                <li><a href="#restrito.html">Restrito</a></li>
             </ul>
         </nav>
         </header>
