Página inicial com todos os recursos funcionando

--- a/ristorante_gianluca.html
+++ b/ristorante_gianluca.html
@@ -109,6 +109,7 @@
         <script src="resources/js/View/form_franquias.js"></script>
         <script src="resources/js/View/tabela_franquias.js"></script>
         <script src="resources/js/View/home.js"></script>
+        <script src="resources/js/Controller/home_controller.js"></script>
         <script src="resources/js/Controller/franquia_controller.js"></script>
         <script src="resources/js/app.js"></script>
     </body>
